<resources>
    <string name="app_name">BelajarAPI</string>
    <string name="search">Search</string>
    <string name="not_found">😔\nJudul film tidak ditemukan.\nPeriksa kembali kueri pencarian anda.</string>
    <string name="looking_movie">Mau cari film apa hari ini?\n😊</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="year">Year</string>

    <string name="bagikan">Bagikan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. Duis sit amet sodales felis. Duis nunc eros, mattis at dui ac, convallis semper risus. In adipiscing ultrices tellus, in suscipit massa vehicula eu.</string>

    <string name="durasi">Durasi</string>
    <string name="tahun">Tahun</string>
    <string name="tipe">Tipe</string>
    <string name="rated">Rated</string>
    <string name="score">Score</string>

    <string name="durasi_value">95 min</string>
    <string name="year_value">2021</string>
    <string name="type_value">Movie</string>
    <string name="movie_title">Initial D Fourth Stage</string>
    <string name="genre_value">Tragedy, Mystery, Romance, School</string>
    <string name="plot_value">In this fourth stage of Initial D, Takumi Fujiwara is challenged by the most skilled street racers…</string>
    <string name="rated_value">TV-PG</string>
    <string name="score_value">8.17</string>
</resources>