<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="40dp">

            <LinearLayout
                android:id="@+id/linLayImgDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="241.52dp"
                    android:layout_height="342.85dp"
                    android:src="@drawable/poster_not_found"
                    android:background="#D3D3D3"
                    android:contentDescription="@string/poster"
                    android:layout_gravity="center_vertical" />

                <LinearLayout
                    android:id="@+id/linLayDetail_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_score_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/score"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score_value"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:tint="@color/icon_color"
                            app:drawableStartCompat="@drawable/ic_star" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_rated_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rated"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_rated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rated_value"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_duration_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/durasi"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/durasi_value"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_year_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tahun"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year_value"
                            android:textSize="16sp"
                            android:maxLength="4"
                            app:tint="@color/text_color" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/tv_type_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />

                        <TextView
                            android:id="@+id/tv_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/type_value"
                            android:textSize="16sp"
                            app:tint="@color/text_color" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTitleInfoWrapper"
                android:layout_width="327.5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/linLayImgDetail"
                app:layout_constraintStart_toStartOf="@+id/linLayImgDetail"
                app:layout_constraintTop_toBottomOf="@id/linLayImgDetail">

                <LinearLayout
                    android:id="@+id/linearLayoutTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_title"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        app:tint="@color/text_color" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/genre_value"
                        android:textColor="#999"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_plot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plot_value"
                android:textSize="16sp"
                app:tint="@color/text_color"
                android:lineSpacingExtra="4dp"
                android:gravity="center"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutTitleInfoWrapper"
                app:layout_constraintStart_toStartOf="@id/linLayImgDetail"
                app:layout_constraintEnd_toEndOf="@id/linLayImgDetail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

        <ProgressBar
            android:id="@+id/progressBarDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!--    <Button-->
        <!--        android:id="@+id/btn_order"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/bagikan"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintEnd_toEndOf="@+id/tv_plot"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/tv_plot"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/tv_plot"-->
        <!--        app:layout_constraintVertical_bias="1.0" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
